--- a/www/css/index.css
+++ b/www/css/index.css
@@ -18,6 +18,11 @@
 	background-color: black;
 	
 	}
+#menu_bar{
+		width:100%;
+		height:35%;
+		background-color:black;
+		}
 #middle_left{
 	width:50%;
 	height:40%;
@@ -52,8 +57,8 @@
 	}
 #footer{
 	width:100%;
-	height:6%;
-	background-color: gray;
+	height:4%;
+	background-color: rgb(204, 65, 0);
 	float:left;
 	overflow:hidden;
 }
@@ -66,4 +71,18 @@
 	img {
 	max-width: 100%;
 	height: auto;
+}
+#upper_bar >img 
+{
+max-width:100%;
+height:50%;
+}
+#social_networks>img{
+width:4%;
+height:80%;
+}
+#social_networks{
+width:80%;
+height:100%;
+float:left;
 }
