--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,4 +1,4 @@
-	html { 
+html { 
 	 background: url(../img/microfono.jpg) no-repeat center center fixed; 
 	 -webkit-background-size: cover;
 	 -moz-background-size: cover;
@@ -14,14 +14,14 @@
 	}
 #upper_bar{
 	width:100%;
-	height:14%;
+	height:7%;
 	background-color: black;
 	
 	}
 #menu_bar{
 		width:100%;
-		height:35%;
-		background-color:black;
+		height:4%;
+		background-color:grey;
 		}
 #middle_left{
 	width:50%;
@@ -63,12 +63,13 @@
 	overflow:hidden;
 }
 #formulario{
-	width: 35%;
+	width: 40%;
 	height:50%;
 	float: right;
 	margin:1.4%;
+	margin-right: 0%;
 }
-	img {
+img {
 	max-width: 100%;
 	height: auto;
 }
@@ -80,7 +81,7 @@ height:80%;
 #upper_bar >img 
 {
 max-width:100%;
-height:50%;
+height:100%;
 }
 #social_networks>img{
 width:4%;
@@ -91,3 +92,114 @@ width:86%;
 height:130%;
 float:left;
 }
+
+ul.menu,
+ul.menu ul,
+ul.menu li,
+ul.menu a {
+    margin: 0;
+    padding: 0;
+    border: none;
+    outline: none;
+}
+ 
+ul.menu {
+    height: 50px;
+    width: 100%;
+ 
+    background: #4c4e5a;
+    background: -webkit-linear-gradient(top, #4c4e5a 0%,#2c2d33 100%);
+    background: -moz-linear-gradient(top, #4c4e5a 0%,#2c2d33 100%);
+    background: -o-linear-gradient(top, #4c4e5a 0%,#2c2d33 100%);
+    background: -ms-linear-gradient(top, #4c4e5a 0%,#2c2d33 100%);
+    background: linear-gradient(top, #4c4e5a 0%,#2c2d33 100%);
+ 
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+}
+ 
+ul.menu li {
+    position: relative;
+    list-style: none;
+    float: left;
+    display: block;
+    height: 40px;
+}
+ul.menu li a {
+    display: block;
+    padding: 0 14px;
+    margin: 6px 0;
+    line-height: 36px;
+    text-decoration: none;
+ 
+    border-left: 1px solid #393942;
+    border-right: 1px solid #4f5058;
+ 
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: bold;
+    font-size: 16px;
+ 
+    color: #f3f3f3;
+    text-shadow: 1px 1px 1px rgba(0,0,0,.6);
+ 
+    -webkit-transition: color .2s ease-in-out;
+    -moz-transition: color .2s ease-in-out;
+    -o-transition: color .2s ease-in-out;
+    -ms-transition: color .2s ease-in-out;
+    transition: color .2s ease-in-out;
+}
+ 
+ul.menu li:first-child a { border-left: none; }
+ul.menu li:last-child a{ border-right: none; }
+ 
+ul.menu li:hover > a { color: #caad16; }
+ul.menu ul {
+    position: absolute;
+    top: 50px;
+    left: 0;
+ 
+    opacity: 0;
+    background: rgba(0,0,0,0.67);
+ 
+    -webkit-border-radius: 0 0 5px 5px;
+    -moz-border-radius: 0 0 5px 5px;
+    border-radius: 0 0 5px 5px;
+ 
+    -webkit-transition: opacity .25s ease .1s;
+    -moz-transition: opacity .25s ease .1s;
+    -o-transition: opacity .25s ease .1s;
+    -ms-transition: opacity .25s ease .1s;
+    transition: opacity .25s ease .1s;
+}
+ 
+ul.menu li:hover > ul { opacity: 1; }
+ 
+ul.menu ul li {
+    height: 0;
+    overflow: hidden;
+    padding: 0;
+ 
+    -webkit-transition: height .25s ease .1s;
+    -moz-transition: height .25s ease .1s;
+    -o-transition: height .25s ease .1s;
+    -ms-transition: height .25s ease .1s;
+    transition: height .25s ease .1s;
+}
+ 
+ul.menu li:hover > ul li {
+    height: 36px;
+    overflow: visible;
+    padding: 0;
+}
+ul.menu ul li a {
+    width: 130px;
+    padding: 0 10px;
+    margin: 0;
+    font-size: 14px;
+ 
+    border: none;
+    border-bottom: 1px solid #353539;
+}
+ 
+ul.menu ul li:last-child a { border: none; }
