--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,5 +1,5 @@
 html { 
-	 background: url(../img/microfono.jpg) no-repeat center center fixed; 
+	 background: url(../img/microfono2.jpg) no-repeat center center fixed; 
 	 -webkit-background-size: cover;
 	 -moz-background-size: cover;
 	 -o-background-size: cover;
@@ -36,7 +36,6 @@ html {
 	-moz-border-radius: 9px;
 	-webkit-border-radius: 9px;
 	border-radius: 9px;
-	
 		}
 #middle_left{
 	width:49.65%;
@@ -105,7 +104,7 @@ html {
 #footer{
 	width:100%;
 	height:4%;
-	background-color: 778899;
+	background-color: 626171;
 	float:left;
 	overflow:hidden;
 	
@@ -190,9 +189,10 @@ ul.menu li a {
     border-left: 1px solid #393942;
     border-right: 1px solid #4f5058;
  
-    font-family: Helvetica, Arial, sans-serif;
-    font-weight: bold;
-    font-size: 16px;
+    /*font-family: Helvetica, Arial, sans-serif;*/
+	font-family: 'afta_serifregular';
+    font-weight: normal;
+    font-size: 14px;
  
     color: #f3f3f3;
     text-shadow: 1px 1px 1px rgba(0,0,0,.6);
@@ -257,3 +257,16 @@ ul.menu ul li a {
 }
  
 ul.menu ul li:last-child a { border: none; }
+
+@font-face {
+    font-family: 'afta_serifregular';
+    src: url('../fuentes/aftaserifthin-regular.eot');
+    src: url('../fuentes/aftaserifthin-regular.eot?#iefix') format('embedded-opentype'),
+         url('../fuentes/aftaserifthin-regular.woff') format('woff'),
+         url('../fuentes/aftaserifthin-regular.ttf') format('truetype'),
+         url('../fuentes/aftaserifthin-regular.svg#afta_serifregular') format('svg');
+    font-weight: bold;
+    font-style: normal;
+
+}
+
