--- a/www/css/index.css
+++ b/www/css/index.css
@@ -104,7 +104,7 @@ html {
 #footer{
 	width:100%;
 	height:4%;
-	background-color: 626171;
+	background-color: grey;
 	float:left;
 	overflow:hidden;
 	
@@ -192,7 +192,7 @@ ul.menu li a {
     /*font-family: Helvetica, Arial, sans-serif;*/
 	font-family: 'afta_serifregular';
     font-weight: normal;
-    font-size: 14px;
+    font-size: 17px;
  
     color: #f3f3f3;
     text-shadow: 1px 1px 1px rgba(0,0,0,.6);
